deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 5
  selector:
    matchLabels:
      app: userservice
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: userservice
        tier: service
    spec:
      containers:
      - name: userservice
        image: "ayangku/userservice:latest"
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5       
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
  labels:
    app: userservice
    tier: service
spec:
  type: NodePort
  ports:
  - port: 3000
  selector:
    app: userservice
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: userservice
  labels:
    app: userservice
    tier: backend
spec:
  backend:
    serviceName: userservice
    servicePort: 3000
